--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Yücel Terlemezoğlu</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Yücel Terlemezoğlu</h1>
+						<p>Computer Engineering Student &nbsp;&bull;&nbsp; GDG Eskişehir &nbsp;&bull;&nbsp; Anadolu University</p>
+						<nav>
+							<ul>,
+								<li><a href="mailto:yucelterlemezuglu@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="https://plus.google.com/+Y%C3%BCcelTERLEMEZO%C4%9ELU" class="icon fa-google-plus"><span class="label">G-Plus</span></a></li>
+								<li><a href="https://github.com/YucelT94" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/y%C3%BCcel-terlemezo%C4%9Flu-161506124?authType=&authToken=&trk=" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.instagram.com/yucelterlemezoglu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://tr.pinterest.com/yucelt94/" class="icon fa-instagram"><span class="label">Pinterest</span></a></li>
+								<li><a href="https://twitter.com/YucelT94" class="icon fa-google-plus"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/YucelT94" class="icon fa-facebook"><span class="label">Facebook</span></a></li>	
+							</ul>
+						</nav>
+					</header>
+			</div>
+		</div>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script>
+			window.onload = function() { document.body.className = ''; }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
+</html>
