--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 								<li><a href="https://github.com/YucelT94" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/y%C3%BCcel-terlemezo%C4%9Flu-161506124?authType=&authToken=&trk=" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.instagram.com/yucelterlemezoglu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://tr.pinterest.com/yucelt94/" class="icon fa-instagram"><span class="label">Pinterest</span></a></li>
-								<li><a href="https://twitter.com/YucelT94" class="icon fa-google-plus"><span class="label">Twitter</span></a></li>
+								<li><a href="https://tr.pinterest.com/yucelt94/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+								<li><a href="https://twitter.com/YucelT94" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/YucelT94" class="icon fa-facebook"><span class="label">Facebook</span></a></li>	
 							</ul>
 						</nav>
