--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<<bod>
 	<head>
 		<title>Yücel Terlemezoğlu</title>
 		<meta charset="utf-8" />
@@ -14,6 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
+	<link rel = "shortcut icon" href="images/favicon.png" />
 	<body class="loading">
 		<div id="wrapper">
 			<div id="bg"></div>
