--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Yücel Terlemezoğlu</h1>
-						<p>Computer Engineering Student &nbsp;&bull;&nbsp; GDG Eskişehir &nbsp;&bull;&nbsp; Anadolu University</p>
+						<p>Computer Engineer &nbsp;&bull;&nbsp; GDG Eskişehir &nbsp;&bull;&nbsp; Anadolu University</p>
 						<nav>
 							<ul>
 								<li><a href="mailto:yucelterlemezuglu@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
