--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
 						<p>Computer Engineer &nbsp;&bull;&nbsp; GDG Eskişehir &nbsp;&bull;&nbsp; Anadolu University</p>
 						<nav>
 							<ul>
-								<li><a href="mailto:yucelterlemezuglu@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="mailto:yucelt@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 								<li><a href="https://plus.google.com/+Y%C3%BCcelTERLEMEZO%C4%9ELU" class="icon fa-google-plus"><span class="label">G-Plus</span></a></li>
 								<li><a href="https://github.com/YucelT94" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/y%C3%BCcel-terlemezo%C4%9Flu-161506124?authType=&authToken=&trk=" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.instagram.com/yucelterlemezoglu/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://tr.pinterest.com/yucelt94/" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 								<li><a href="https://twitter.com/YucelT94" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/YucelT94" class="icon fa-facebook"><span class="label">Facebook</span></a></li>	
 							</ul>
